--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "author": "Martin",
   "license": "MIT",
   "scripts": {
-    "start": "node_modules/.bin/webpack-dev-server -d --progress --colors --inline --hot --https --watch --content-base bin/"
+    "start": "node_modules/.bin/webpack-dev-server -d --progress --colors --inline --hot --https --watch --content-base bin/",
+    "test": "karma start"
   },
   "dependencies": {
-    "angular": "1.5.11"
+    "angular": "1.5.11",
+    "angular-ui-router": "^0.4.2"
   },
   "devDependencies": {
+    "angular-mocks": "1.5.11",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.14.0",
@@ -20,6 +23,13 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
+    "jasmine-core": "^2.6.0",
+    "karma": "^1.6.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-spec-reporter": "0.0.31",
+    "karma-webpack": "^1.8.1",
     "node-sass": "^3.13.1",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.16.1",
